[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "delftdashboard_watersheds_toolbox"
description = "Delft Dashboard toolbox for selecting and exporting watershed boundaries"
readme = "README.md"
authors = [
    { name = "Maarten van Ormondt", email = "maarten.vanormondt@deltares.nl"},
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "shapely",
    "toml",
    "boto3",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]

[project.entry-points."delftdashboard.toolboxes"]
watersheds = "delftdashboard_watersheds_toolbox"

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "delftdashboard_watersheds_toolbox.__version__" }

[tool.setuptools.packages.find]
include = ["delftdashboard_watersheds_toolbox*"]

[tool.setuptools.package-data]
"*" = ["*.yml"]
